hts-tvheadend (2.8) hts; urgency=low

  * Added support for AAC audio

  * Added support for manual creation of DVR entries. Prior to this it
    was only possible to schedule a recording based on EPG entries.

hts-tvheadend (2.7) hts; urgency=low

  * Added support for DVB subtitles. Currently only forwarded over HTSP

  * Add support for reception of RTP encapsulated IPTV

  * Fixed a crash caused by a race condition when starting a subscription

  * Increase maximum packet size for IPTV to 65536 bytes

 -- Andreas Öman <andreas@lonelycoder.com>  Sun, 06 Dec 2009 20:40:41 +0100

hts-tvheadend (2.6) hts; urgency=low

  * Tvheadend's DVB service probe will now make the channel join tags based
    on the service type and DVB provider name.

  * Add support for tuning on ATSC adapters

  * Add support for sattelite beams with circular polarisation

  * If a user changed the XMLTV source for a channel to 'None', tvheadend
    would crash. This is now fixed.

  * Add support for copying a selection of muxes from one DVB adapter to
    another in the web UI.

  * Support for DVB-S2 has been added

  * Default character encoding in DVB is ISO6937, not Latin-1. Ticket #96

  * Add support for DiSEqC 1.1 / 2.1, configured on per-adapter basis.
    Ticket #99

  * Increase logging and include various stats to XMLTV grab

  * Add support for configuring a per-channel pre/post extra time for
    scheduled recordings. Ticket #104

  * Autodetect CPU capabilities and choose best mode for CSA descrambler.
    Ticket #122

 -- Andreas Öman <andreas@lonelycoder.com>  Sun, 29 Nov 2009 14:02:36 +0100

hts-tvheadend (2.5) hts; urgency=low

  * If a previosly detected DVB adapter was not present during startup,
    Tvheadend would crash. This is now fixed.

  * If XMLTV grabbing was disabled tvheadend would spin in a 100% CPU loop.
    This is now fixed.

  * The HTSP service is now announced via AVAHI (mDNS service discovery)
