@@ -5,6 +5,11 @@ hts-tvheadend (2.8) hts; urgency=low
   * Added support for manual creation of DVR entries. Prior to this it
     was only possible to schedule a recording based on EPG entries.
 
+  * It's now possible to enable/disable the signal quality monitor per
+    adapter. This is now default off as it seem to mostly cause problems
+    for people and it's only useful if you have complex setups with
+    multiple adapters, etc.
+
 hts-tvheadend (2.7) hts; urgency=low
 
   * Added support for DVB subtitles. Currently only forwarded over HTSP
